@@ -48,12 +48,11 @@ import org.springframework.util.Assert;
 import org.springframework.util.CollectionUtils;
 
 /**
- * FactoryBean returning the properties stored under a given persistent id in
- * the ConfigurationAdmin service. Once retrieved, the properties will remain
- * the same, even when the configuration object that it maps, changes.
+ * FactoryBean returning the properties stored under a given persistent id in the ConfigurationAdmin service. Once
+ * retrieved, the properties will remain the same, even when the configuration object that it maps, changes.
  * 
- * <b>Note:</b> This implementation performs a lazy initialization of the
- * properties to receive the most up to date configuration.
+ * <b>Note:</b> This implementation performs a lazy initialization of the properties to receive the most up to date
+ * configuration.
  * 
  * @author Costin Leau
  * @see Configuration
@@ -79,9 +78,8 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 
 	private class ChangeableProperties extends Properties implements ServicePropertiesListenerManager {
 
-		private List<ServicePropertiesChangeListener> listeners = Collections.synchronizedList(new ArrayList<ServicePropertiesChangeListener>(
-			4));
-
+		private List<ServicePropertiesChangeListener> listeners =
+				Collections.synchronizedList(new ArrayList<ServicePropertiesChangeListener>(4));
 
 		public void addListener(ServicePropertiesChangeListener listener) {
 			if (listener != null) {
@@ -106,7 +104,6 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 		}
 	}
 
-
 	/** logger */
 	private static final Log log = LogFactory.getLog(ConfigAdminPropertiesFactoryBean.class);
 
@@ -117,11 +114,13 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 	private Properties localProperties;
 	private volatile boolean dynamic = false;
 	private volatile ServiceRegistration registration;
-
+	private boolean initLazy = true;
+	private long initTimeout = 0;
 
 	public void afterPropertiesSet() throws Exception {
 		Assert.hasText(persistentId, "persistentId property is required");
 		Assert.notNull(bundleContext, "bundleContext property is required");
+		Assert.isTrue(initTimeout >=0, "a positive initTimeout is required");
 
 		if (dynamic) {
 			// create special Properties object
@@ -129,9 +128,8 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 			// init properties
 			// copy config admin properties
 			try {
-				initProperties(properties, CMUtils.getConfiguration(bundleContext, persistentId));
-			}
-			catch (IOException ioe) {
+				initProperties(properties, CMUtils.getConfiguration(bundleContext, persistentId, initTimeout));
+			} catch (IOException ioe) {
 				throw new BeanInitializationException("Cannot retrieve configuration for pid=" + persistentId, ioe);
 			}
 
@@ -175,9 +173,10 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 		// if static, perform lazy initialization
 		if (properties == null) {
 			try {
-				properties = initProperties(new Properties(), CMUtils.getConfiguration(bundleContext, persistentId));
-			}
-			catch (IOException ioe) {
+				properties =
+						initProperties(new Properties(), CMUtils.getConfiguration(bundleContext, persistentId,
+								initTimeout));
+			} catch (IOException ioe) {
 				throw new BeanInitializationException("Cannot retrieve configuration for pid=" + persistentId, ioe);
 			}
 		}
@@ -212,20 +211,17 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 	}
 
 	/**
-	 * Sets the local properties, e.g. via the nested tag in XML bean
-	 * definitions. These can be considered defaults, to be overridden by
-	 * properties loaded from the Configuration Admin.
+	 * Sets the local properties, e.g. via the nested tag in XML bean definitions. These can be considered defaults, to
+	 * be overridden by properties loaded from the Configuration Admin.
 	 */
 	public void setProperties(Properties properties) {
 		this.localProperties = properties;
 	}
 
 	/**
-	 * Sets whether local properties override properties from files.
-	 * <p>
-	 * Default is "false": Properties from the Configuration Admin override
-	 * local defaults. Can be switched to "true" to let local properties
-	 * override the Configuration Admin properties.
+	 * Sets whether local properties override properties from files. <p> Default is "false": Properties from the
+	 * Configuration Admin override local defaults. Can be switched to "true" to let local properties override the
+	 * Configuration Admin properties.
 	 */
 	public void setLocalOverride(boolean localOverride) {
 		this.localOverride = localOverride;
@@ -245,16 +241,37 @@ public class ConfigAdminPropertiesFactoryBean implements BundleContextAware, Ini
 	}
 
 	/**
-	 * Indicates if the returned configuration is dynamic or static. A static
-	 * configuration (default) ignores any updates made to the configuration
-	 * admin entry that it maps. A dynamic configuration on the other hand will
-	 * reflect the changes in its content. Third parties can be notified through
-	 * the {@link ServicePropertiesChangeListener} contract.
+	 * Indicates if the returned configuration is dynamic or static. A static configuration (default) ignores any
+	 * updates made to the configuration admin entry that it maps. A dynamic configuration on the other hand will
+	 * reflect the changes in its content. Third parties can be notified through the
+	 * {@link ServicePropertiesChangeListener} contract.
 	 * 
-	 * @param dynamic whether the returned object reflects the changes in the
-	 *        configuration admin or not.
+	 * @param dynamic whether the returned object reflects the changes in the configuration admin or not.
 	 */
 	public void setDynamic(boolean dynamic) {
 		this.dynamic = dynamic;
+	}
+
+	/**
+	 * Specifies whether the properties reflecting the Configuration Admin service entry will be initialized lazy or
+	 * not. Default is "true": meaning the properties will be initialized just before being requested (from the factory)
+	 * for the first time. This is the common case as it allows the most recent entry to be used. If set to "false", the
+	 * properties object will be initialized at startup, along with the bean factory.
+	 * 
+	 * @param initLazy whether or not the bean is lazily initialized
+	 */
+	public void setInitLazy(boolean initLazy) {
+		this.initLazy = initLazy;
+	}
+
+	/**
+	 * Specifies the amount of time (in milliseconds) the bean factory will wait for the Configuration Admin entry to be
+	 * initialized (return a non-null value). If the entry is not null at startup, no waiting will be performed. Similar
+	 * to the other timeout options, a value of '0' means no waiting. By default, no waiting (0) is performed.
+	 * 
+	 * @param initTimeout the amount of time to wait for the entry to be initialized.
+	 */
+	public void setInitTimeout(long initTimeout) {
+		this.initTimeout = initTimeout;
 	}
 }
